--- a/Abstract Help Page Copy/style.css
+++ b/Abstract Help Page Copy/style.css
@@ -54,26 +54,98 @@
 .dashboard{
     background-color: #dadbf1;
     font-size: 40px;
-    height: 400px;
+    height: 50vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
    
 }
 
 .dash-child{
     font-size: 70px;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     padding: 80px 30px 0 30px;
     box-sizing: border-box;
+    text-align: center;
 }
 
 .dash-child form input{
     height: 60px;
-    margin: 20px 0;
+    margin: 40px 0;
     font-size: 22px;
     width: 700px;
     border: 1px solid black;
     border-radius: 5px;
     text-indent: 20px;
+}
+
+.mainbody{
+    background-color: #ffffff;
+    margin-top: 7%;
+    margin-bottom: 5%;
+    display: flex;
+}
+
+.left{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.right{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.content-box{
+    display: flex;
+    /* margin: 20px; */
+    margin: 5%;
+    font-size:larger;
+    width: 55%;
+}
+
+.content-box img{
+    width: 60px;
+    vertical-align: top;
+    margin-right:20px;
+}
+
+.content-box p{
+    padding-bottom:20px;
+}
+
+.footer-down{
+    background-color: #000000;
+    color: white;
+    display: flex;
+    justify-content:space-evenly;
+    height: 300px;
+    padding-top: 20px;
+    box-sizing: border-box;
+    vertical-align: middle;
+}
+
+.footer-down strong{
+    font-size: larger;
+}
+
+
+.f1{
+    margin-top: 20%;
+    margin-bottom: 20%;
+}
+
+.f2{
+    margin-top: 10%;
+    margin-bottom: 10%;
+}
+
+.f3{
+    margin-top: 10%;
+}
+
+.fin{
+    margin-bottom: 5px;
 }
